--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Rounded:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="navigation">
+      <div class="logo">Header logo</div>
+      <div class="links">
+        <ul class="right">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="entrance">
+      <div class="login">
+        <h1 class="main-text">This website is awesome</h1>
+        <p class="secondary-text">
+          This website has some subtext that goes here under the main title.
+          It`s a smaller font and the color is lower contrast
+        </p>
+        <button id="my-but">Sign in</button>
+      </div>
+      <div class="image-container">
+        <img
+          class="image"
+          src="pexels-yufan-jiang-3217831-10647646.jpg"
+          alt="green"
+          height="240"
+          width="auto"
+        />
+      </div>
+    </div>
+    <div class="card">
+      <div class="info-text">Some random information.</div>
+    </div>
+  </body>
 </html>
