Added information container
- added information container title
- added photos and descriptions below them

--- a/index.html
+++ b/index.html
@@ -33,15 +33,66 @@
       <div class="image-container">
         <img
           class="image"
-          src="pexels-yufan-jiang-3217831-10647646.jpg"
+          src="images/pexels-yufan-jiang-3217831-10647646.jpg"
           alt="green"
           height="240"
           width="auto"
         />
       </div>
     </div>
-    <div class="card">
+    <div class="containers">
       <div class="info-text">Some random information.</div>
+      <div class="photos-container">
+        <div class="photo-element">
+          <img
+            id="info-image"
+            src="images/pexels-duc-nguyen-400576574-26733248.jpg"
+            alt=""
+            height="150"
+            width="150"
+          />
+          <figcaption class="photo-text">
+            This text visually describes this picture
+          </figcaption>
+        </div>
+        <div class="photo-element">
+          <img
+            id="info-image"
+            src="images/pexels-eberhardgross-2437286.jpg"
+            alt=""
+            height="150"
+            width="150"
+          />
+          <figcaption class="photo-text">
+            This text visually describes this picture
+          </figcaption>
+        </div>
+        <div class="photo-element">
+          <img
+            id="info-image"
+            src="images/pexels-flooriefloor-27731529.jpg"
+            alt=""
+            height="150"
+            width="150"
+          />
+          <figcaption class="photo-text">
+            This text visually describes this picture
+          </figcaption>
+        </div>
+        <div class="photo-element">
+          <img
+            id="info-image"
+            src="images/pexels-redowanmohammad-26872995.jpg"
+            alt=""
+            height="150"
+            width="150"
+          />
+          <figcaption class="photo-text">
+            This text visually describes this picture
+          </figcaption>
+        </div>
+      </div>
     </div>
+    <div class="finish-container"></div>
   </body>
 </html>
