Change photo names and alts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="image-container">
         <img
           class="image"
-          src="images/pexels-yufan-jiang-3217831-10647646.jpg"
+          src="images/pexels.jpg"
           alt="green"
           height="240"
           width="auto"
@@ -46,8 +46,8 @@
         <div class="photo-element">
           <img
             id="info-image"
-            src="images/pexels-duc-nguyen-400576574-26733248.jpg"
-            alt=""
+            src="images/city.jpg"
+            alt="city"
             height="150"
             width="150"
           />
@@ -58,8 +58,8 @@
         <div class="photo-element">
           <img
             id="info-image"
-            src="images/pexels-eberhardgross-2437286.jpg"
-            alt=""
+            src="images/sahara.jpg"
+            alt="sahara"
             height="150"
             width="150"
           />
@@ -70,8 +70,8 @@
         <div class="photo-element">
           <img
             id="info-image"
-            src="images/pexels-flooriefloor-27731529.jpg"
-            alt=""
+            src="images/summer-mountains.jpg"
+            alt="summer-mountains"
             height="150"
             width="150"
           />
@@ -82,8 +82,8 @@
         <div class="photo-element">
           <img
             id="info-image"
-            src="images/pexels-redowanmohammad-26872995.jpg"
-            alt=""
+            src="images/winter-mountains.jpg"
+            alt="winter-mountains"
             height="150"
             width="150"
           />
