Added new container

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
         </div>
       </div>
     </div>
-    <div class="finish-container"></div>
+    <div class="finish-container">
+      <div class="finish-text">
+        <p class="lorem">
+          Lorem ipsum odor amet, consectetuer adipiscing elit. Suspendisse
+          vehicula dis dapibus finibus venenatis convallis praesent tempor odio.
+        </p>
+        <p class="author">Thor, God of Thunder!</p>
+      </div>
+    </div>
   </body>
 </html>
