Add Sign-in container
- Add new container with title and paragraph
- Add button Sign-in

--- a/index.html
+++ b/index.html
@@ -94,12 +94,23 @@
       </div>
     </div>
     <div class="finish-container">
-      <div class="finish-text">
+      <div class="finish-text-container">
         <p class="lorem">
           Lorem ipsum odor amet, consectetuer adipiscing elit. Suspendisse
           vehicula dis dapibus finibus venenatis convallis praesent tempor odio.
         </p>
         <p class="author">Thor, God of Thunder!</p>
+      </div>
+    </div>
+    <div class="sign-in">
+      <div class="sign-in-container">
+        <div class="maintext">
+          <h3 class="sign-in-main">Call to action! it`s time!</h3>
+          <p class="sign-in-secondary">
+            Sign up for our product by clicking right over there!
+          </p>
+        </div>
+        <button id="second-button">Sign in</button>
       </div>
     </div>
   </body>
