Add footer with text

--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
         <button id="second-button">Sign in</button>
       </div>
     </div>
+    <div class="footer">Copiright © Miroslavv99 2024</div>
   </body>
 </html>
