--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Rounded:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png" />
+    <link rel="icon" href="favicon/favicon-16x16.png" />
+    <link rel="icon" href="favicon/favicon-32x32.png" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <title>Awesome site</title>
   </head>
   <body>
     <div class="navigation">
