--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="favicon/favicon-16x16.png" />
     <link rel="icon" href="favicon/favicon-32x32.png" />
     <link rel="manifest" href="favicon/site.webmanifest" />
-    <title>Awesome site</title>
+    <title>Awosome Site</title>
   </head>
   <body>
     <div class="navigation">
